--- a/Inkscape/Inkscapes nybörjarguide/editing-paths.po
+++ b/Inkscape/Inkscapes nybörjarguide/editing-paths.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:02+0200\n"
+"PO-Revision-Date: 2025-09-01 18:10+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -38,7 +38,7 @@ msgid ""
 "The second-most used tool in Inkscape is the **Node tool**. It will be your "
 "friend when you need to **edit a path**."
 msgstr ""
-"Det näst mest använda verktyget i Inkscape är **Node tool**. Det kommer att "
+"Det näst mest använda verktyget i Inkscape är **Nodverktyg**. Det kommer att "
 "vara din vän när du behöver **redigera en slinga**."
 
 #: ../../source/editing-paths.rst:9 ac380bb7dfbd4d73b32b2ab5da2949c3
@@ -47,37 +47,37 @@ msgstr "Vad du behöver veta om slingor"
 
 #: ../../source/editing-paths.rst:11 e306eb59899e4ff8b7324e00d72b2b36
 msgid ""
-"Every path consists of nodes that are connected to each other, like pearls "
-"on a string. The ends of this string can be connected like in a chain "
-"(closed path), or there can be two end nodes, that are only connected to one "
-"other node (open path)."
+"Every path consists of nodes that are connected to each other, like pearls on "
+"a string. The ends of this string can be connected like in a chain (closed "
+"path), or there can be two end nodes, that are only connected to one other "
+"node (open path)."
 msgstr ""
 "Varje slinga består av noder som är kopplade till varandra, som pärlor på ett "
-"snöre. Ändarna på detta snöre kan vara anslutna som i en kedja (sluten väg), "
-"eller så kan det finnas två ändnoder som bara är anslutna till en annan nod "
-"(öppen väg)."
+"snöre. Ändarna på detta snöre kan vara anslutna som i en kedja (sluten "
+"slinga), eller så kan det finnas två ändnoder som bara är anslutna till en "
+"annan nod (öppen slinga)."
 
 #: ../../source/editing-paths.rst:13 7c1646e0aa0b4dfb9dbfd1723cc0ed55
 msgid "Open and closed paths"
-msgstr "Öppna och stängda vägar"
+msgstr "Öppna och stängda slingor"
 
 #: ../../source/editing-paths.rst:17 6304373e494b46d697c7a1957bbe5d42
 msgid ""
 "On the left side, there is an open path. On the right side, it has been "
 "closed by connecting the two end nodes."
 msgstr ""
-"På vänster sida finns en öppen väg. På den högra sidan har den stängts genom "
-"att ansluta de två slutnoderna."
+"På vänster sida finns en öppen slinga. På den högra sidan har den stängts "
+"genom att ansluta de två slutnoderna."
 
 #: ../../source/editing-paths.rst:19 26264c62c25849a2a2e8dd138ff081ab
 msgid ""
-"Each node can only be connected to one or two other nodes. It's impossible "
-"to attach a third line to a node. When you need to draw a branching, you "
-"must create a separate path for one of the branches."
+"Each node can only be connected to one or two other nodes. It's impossible to "
+"attach a third line to a node. When you need to draw a branching, you must "
+"create a separate path for one of the branches."
 msgstr ""
 "Varje nod kan bara anslutas till en eller två andra noder. Det är omöjligt "
 "att fästa en tredje linje vid en nod. När du ska rita en förgrening måste du "
-"skapa en separat väg för en av grenarna."
+"skapa en separat slinga för en av grenarna."
 
 #: ../../source/editing-paths.rst:21 8eafe2768bcb487abeaa9a0e82493ea8
 msgid ""
@@ -110,7 +110,7 @@ msgstr "Klicka på och dra den nod som du vill flytta."
 
 #: ../../source/editing-paths.rst:32 b8cb79f78ba14409ab0db27775b35dc2
 msgid "Node with incoming and an outgoing path segment."
-msgstr "Nod med ett inkommande och ett utgående vägsegment."
+msgstr "Nod med ett inkommande och ett utgående slingsegment."
 
 #: ../../source/editing-paths.rst:36 3dda71a60c8f49f3bfc466e872301244
 msgid "This node has an incoming and an outgoing path segment connected to it."
@@ -134,8 +134,8 @@ msgid ""
 "control the shape of the adjacent path segment."
 msgstr ""
 "För mer gradvisa förändringar kan slingorna redigeras med hjälp av nodernas "
-"handtag. Varje nod kan ha upp till två cirkulära handtag som är anslutna "
-"till den med tunna linjer. Dessa handtag kan också flyttas runt med musen. "
+"handtag. Varje nod kan ha upp till två cirkulära handtag som är anslutna till "
+"den med tunna linjer. Dessa handtag kan också flyttas runt med musen. "
 "Handtagen styr formen på det intilliggande slingsegmentet."
 
 #: ../../source/editing-paths.rst:50 8947b8222ea74acfa0f5ad0c47b7624a
@@ -148,7 +148,7 @@ msgstr "Klicka och dra i nodens handtag."
 
 #: ../../source/editing-paths.rst:53 f87304b9e6e14811b7e2d59388e0c1d4
 msgid "Moving handles"
-msgstr "Flyttbara handtag"
+msgstr "Flytta handtag"
 
 #: ../../source/editing-paths.rst:57 779f0032c25b4a84b08a128f481bee8d
 msgid "You can modify path segments by moving the node's handles."
@@ -162,14 +162,14 @@ msgid ""
 "handles for this."
 msgstr ""
 "Du kan också manipulera linjerna mellan noderna (slingsegmenten) direkt med "
-"hjälp av Node-verktyget. Klicka och dra på det vägsegment som förbinder två "
+"hjälp av Nodverktyget. Klicka och dra på det slingsegment som förbinder två "
 "noder för att ändra dess krökning, utan att behöva använda handtagen för "
 "detta."
 
 #: ../../source/editing-paths.rst:63 7b62bec28af14c11bf4448fe2669f98f
 msgid "Moving segments"
-msgstr "Rörliga segment"
+msgstr "Flytta segment"
 
 #: ../../source/editing-paths.rst:67 bc704ecef69940a4ad6365b16bf97948
 msgid "Dragging directly on the path gives quick results."
-msgstr "Att dra direkt på slingan ger snabba resultat."
+msgstr "Dra direkt på slingan ger snabba resultat."
