--- a/Inkscape/Inkscapes nybörjarguide/export-other-formats.po
+++ b/Inkscape/Inkscapes nybörjarguide/export-other-formats.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:20+0200\n"
+"PO-Revision-Date: 2025-09-01 19:27+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -36,8 +36,8 @@ msgstr ""
 "Förutom :term:`PDF <Portable Document Format>` och :term:`PNG` kan Inkscape "
 "exportera till en mängd andra filformat. En lista över tillgängliga format i "
 "din egen Inkscape-installation finns längst ner i "
-"dialogrutorna :menuselection:`File --&gt; Save`, :menuselection:`File --&gt; "
-"Save as` och :menuselection:`File --&gt; Save a Copy`."
+"dialogrutorna :menuselection:`Arkiv --&gt; Spara`, :menuselection:`Arkiv --"
+"&gt; Spara som` och :menuselection:`Arkiv --&gt; Spara en kopia`."
 
 #: ../../source/export-other-formats.rst:11 a5cde587efd0426a9235a147d667085c
 msgid ""
@@ -61,8 +61,8 @@ msgstr ""
 "använder funktionen :guilabel:`Spara en kopia` för detta och att du sparar "
 "din originalfil som :guilabel:`Inkscape SVG`. På så sätt kan du alltid gå "
 "tillbaka och göra ändringar i originalritningen och du förlorar inte "
-"användbara redigeringsdata, t.ex. guider, rutnät, slingeffekter, lager och "
-"mycket mer."
+"användbara redigeringsdata, t.ex. stödlinjer, rutnät, slingeffekter, lager "
+"och mycket mer."
 
 #: ../../source/export-other-formats.rst:21 3e1d7df2791a4d11b7865da4d662c0a0
 msgid ""
@@ -80,11 +80,11 @@ msgstr ""
 
 #: ../../source/export-other-formats.rst:27 7df4c801579549fb9346990d696fa185
 msgid "Commonly available export file formats"
-msgstr "Vanligt förekommande exportfilformat"
+msgstr "Vanliga och tillgängliga exportfilformat"
 
 #: ../../source/export-other-formats.rst:29 e5f16f27279346758337d3bee58ebcce
 msgid "*(ordered by file extension)*"
-msgstr "*(sorterat efter filändelse)*"
+msgstr "*(sorterade efter filändelse)*"
 
 #: ../../source/export-other-formats.rst:31 595d81d5cefa4bdda5e887d65a6d226c
 msgid "Desktop Cutting Plotter (AutoCAD DXF R 12) (\\*.dxf)"
@@ -95,7 +95,7 @@ msgstr "Stationär skärplotter (AutoCAD DXF R 12) (\\*.dxf)"
 #: ../../source/export-other-formats.rst:51 257527337fbf4eb8833d64fc78678761
 #: 3a489664bead4e1d916375060f190620 b83d6aae382a4aefa78b565737ed1b03
 msgid "plotter file format"
-msgstr "plotterns filformat"
+msgstr "plotterfilformat"
 
 #: ../../source/export-other-formats.rst:34 29a48daf757649069274f3b1f2ece6fd
 msgid "Desktop Cutting Plotter (AutoCAD DXF R 14) (\\*.dxf)"
@@ -103,7 +103,7 @@ msgstr "Stationär skärplotter (AutoCAD DXF R 14) (\\*.dxf)"
 
 #: ../../source/export-other-formats.rst:37 2ac365370b0f4ff0a26f3ef27a2fb419
 msgid "Enhanced Metafile (\\*.emf)"
-msgstr "Förbättrad metafil (\\*.emf)"
+msgstr "Enhanced Metafile (\\*.emf)"
 
 #: ../../source/export-other-formats.rst:38 d41e5354a5684909b33cc0facd2aa4ca
 msgid "improved version of .wmf with support for Bézier curves"
@@ -111,7 +111,7 @@ msgstr "förbättrad version av .wmf med stöd för Bézier-kurvor"
 
 #: ../../source/export-other-formats.rst:40 f76b46bee1e34672aed353b94b174551
 msgid "Encapsulated PostScript (\\*.eps)"
-msgstr "Inkapslad PostScript (\\*.eps)"
+msgstr "Encapsulated PostScript (\\*.eps)"
 
 #: ../../source/export-other-formats.rst:41 cb749efba32b40ac96f9cac1afd4bb3e
 msgid "embeddable printer graphics file"
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../../source/export-other-formats.rst:50 a75759df58fe4bfe8cfe82d32cee9d8e
 msgid "HP Graphics Language plot file (\\*.hpgl)"
-msgstr "HP Graphics Language plottfil (\\*.hpgl)"
+msgstr "HP Graphics Language-plottfil (\\*.hpgl)"
 
 #: ../../source/export-other-formats.rst:53 d17de597f742484d9e141ca451a93de9
 msgid "HTML 5 canvas (\\*.html)"
@@ -164,7 +164,7 @@ msgstr "öppet diagramfilformat, för användning med t.ex. LibreOffice"
 
 #: ../../source/export-other-formats.rst:59 7f2e0bd01ac041eb86c96e89f1055d62
 msgid "Portable Document Format (\\*.pdf)"
-msgstr "Portabelt dokumentformat (\\*.pdf)"
+msgstr "Portable Document Format (\\*.pdf)"
 
 #: ../../source/export-other-formats.rst:60 20d08feeedff4cf2b21119d4c9e47253
 msgid "standardized document exchange file format"
@@ -184,7 +184,7 @@ msgstr "PostScript (\\*.ps)"
 
 #: ../../source/export-other-formats.rst:66 fbb4351a0c2f4159a3a709d8bec03d5b
 msgid "printer graphics language file format"
-msgstr "skrivare grafik språk filformat"
+msgstr "filformat för skrivargrafikspråk"
 
 #: ../../source/export-other-formats.rst:68 6c733c899f42477bbfd252b87e7936e7
 msgid "Synfig Animation (\\*.sif)"
@@ -192,7 +192,7 @@ msgstr "Synfig Animation (\\*.sif)"
 
 #: ../../source/export-other-formats.rst:69 71a9d9aacf774f0f8eb581d44a09d5c4
 msgid "Synfig animation canvas file format"
-msgstr "Synfig animation canvas filformat"
+msgstr "Synfig animation canvas-filformat"
 
 #: ../../source/export-other-formats.rst:71 bf33d9cac9f94ae781907bbd8afc01ec
 msgid "Optimized SVG (\\*.svg)"
@@ -216,7 +216,7 @@ msgstr "Komprimerad Inkscape SVG (\\*.svgz)"
 
 #: ../../source/export-other-formats.rst:78 8f3a14d82fd14405b0914d3dcbb4565c
 msgid "gzip-compressed SVG file with all editor data"
-msgstr "gzip-komprimerad SVG-fil med all redaktörsdata"
+msgstr "gzip-komprimerad SVG-fil med all redigerardata"
 
 #: ../../source/export-other-formats.rst:80 3f5d13a15d104797be9fc21e531e7881
 msgid "Compressed plain SVG (\\*.svgz)"
@@ -224,7 +224,7 @@ msgstr "Komprimerad vanlig SVG (\\*.svgz)"
 
 #: ../../source/export-other-formats.rst:81 e940445b82de41c5bd323b90455b1867
 msgid "gzip-compressed SVG file without editor data"
-msgstr "gzip-komprimerad SVG-fil utan redigeringsdata"
+msgstr "gzip-komprimerad SVG-fil utan redigerardata"
 
 #: ../../source/export-other-formats.rst:83 08aabb5a26fe4a68939b964f09068559
 msgid "Layers as Separate SVG (\\*.tar)"
