--- a/Inkscape/Inkscapes nybörjarguide/fill-and-stroke-dialog.po
+++ b/Inkscape/Inkscapes nybörjarguide/fill-and-stroke-dialog.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:30+0200\n"
+"PO-Revision-Date: 2025-09-01 18:04+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,19 +23,19 @@ msgstr ""
 
 #: ../../source/fill-and-stroke-dialog.rst:3 68677613f7d44124a4b495cf5136b45b
 msgid "The Fill and Stroke Dialog"
-msgstr "Dialogrutan Fyll och streck"
+msgstr "Dialogrutan Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:5 22a670c16b0b47b49acafdb112390156
 msgid ""
 "|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`F` :menuselection:`Object --> Fill and Stroke`"
 msgstr ""
-"|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
-"+ :kbd:`F` :menuselection:`Objekt --> Fyll och streck`"
+"|Fyllning och streck dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
+"+ :kbd:`F` :menuselection:`Objekt --> Fyllning och streck`"
 
 #: ../../source/fill-and-stroke-dialog.rst:65 8e6d2b09c82d43d8b92099a370ae14ab
 msgid "Fill and Stroke dialog icon"
-msgstr "Ikon för dialogrutan Fyll och streck"
+msgstr "Ikon för dialogrutan Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:7 be07618a017443d59e6dff6c191e1222
 msgid ""
@@ -54,18 +54,18 @@ msgid ""
 "first row of buttons in the tabs for fill and stroke paint are for setting "
 "the type of fill or stroke paint that you want to use:"
 msgstr ""
-"Dialogrutan har tre flikar: en för :guilabel:`Fill`, en "
-"för :guilabel:`Stroke paint` och en för :guilabel:`Stroke style`. Den "
-"första raden av knappar i flikarna för fyllning och streckfärg används för "
-"att ställa in vilken typ av fyllning eller streckfärg du vill använda:"
+"Dialogrutan har tre flikar: en för :guilabel:`Fyllning`, en "
+"för :guilabel:`Streckfärg` och en för :guilabel:`Streckstil`. Den första "
+"raden av knappar i flikarna för fyllning och streckfärg används för att "
+"ställa in vilken typ av fyllning eller streckfärg du vill använda:"
 
 #: ../../source/fill-and-stroke-dialog.rst:13 5a67c443970f4c6b96b5cd49349d7f63
 msgid ""
 "|Icon for No Paint| The **cross** needs to be active when you do not want "
 "to have any fill or stroke paint respectively."
 msgstr ""
-"|Icon for No Paint| **Korset** måste vara aktivt när du inte vill ha någon "
-"fyllnings- eller strokefärg."
+"|Icon for No Paint| Detta **kors** måste vara aktivt när du inte vill ha "
+"någon fyllnings- eller streckfärg."
 
 #: ../../source/fill-and-stroke-dialog.rst:67 41029df774fe4504aa4ba28823cdd0ca
 msgid "Icon for No Paint"
@@ -77,7 +77,7 @@ msgid ""
 "to apply a flat, uniform color."
 msgstr ""
 "|Icon for Solid Paint| Den **första rutan** måste vara aktiverad om du vill "
-"applicera en platt, enhetlig färg."
+"tillämpa en platt, enhetlig färg."
 
 #: ../../source/fill-and-stroke-dialog.rst:69 315d774d9c1b4aba94c3e786237f2e4e
 msgid "Icon for Solid Paint"
@@ -95,7 +95,7 @@ msgstr ""
 
 #: ../../source/fill-and-stroke-dialog.rst:71 6f8a5788f4684ff88546e1284026bc79
 msgid "Icon for linear gradients in Fill and Stroke dialog"
-msgstr "Ikon för linjära gradienter i dialogrutan Fill and Stroke"
+msgstr "Ikon för linjära gradienter i dialogrutan Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:22 6fc8af8c2f954f289969c99a11b20fcc
 msgid ""
@@ -108,26 +108,26 @@ msgstr ""
 
 #: ../../source/fill-and-stroke-dialog.rst:73 fc06a16bc0824727803cb18e28792660
 msgid "Icon for radial gradients in Fill and Stroke dialog"
-msgstr "Ikon för radiella gradienter i dialogen Fill and Stroke"
+msgstr "Ikon för radiella gradienter i dialogen Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:25 af9099f2b9664bf2b4f472bd1eb7bb9e
 msgid ""
 "|Icon for mesh gradients in Fill and Stroke dialog| The **next square** "
 "with its four quarters is needed for using a mesh gradient."
 msgstr ""
-"|Icon for mesh gradients in Fill and Stroke dialog| **Nästkommande "
-"kvadrat** med sina fyra fjärdedelar behövs för att använda en mesh-gradient."
+"|Icon for mesh gradients in Fill and Stroke dialog| **Nästkommande ruta** "
+"med sina fyra fjärdedelar behövs för att använda en nätgradient."
 
 #: ../../source/fill-and-stroke-dialog.rst:75 e5355b4b4d704ffb81cdaaa4bd401ae9
 msgid "Icon for mesh gradients in Fill and Stroke dialog"
-msgstr "Ikon för mesh-gradienter i dialogrutan Fill and Stroke"
+msgstr "Ikon för mesh-gradienter i dialogrutan Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:27 9e8baa2bc61b4b0aa00ffc9f6d61c8ab
 msgid ""
 "|image6| The **patterned square** when active will allow you to apply a "
 "pattern."
 msgstr ""
-"|image6| Den **mönstrade rutan** när den är aktiv gör att du kan applicera "
+"|image6| Den **mönstrade rutan** när den är aktiv gör att du kan tillämpa "
 "ett mönster."
 
 #: ../../source/fill-and-stroke-dialog.rst:77 9163416e8dc447f7a8cdfe1311e2398d
@@ -140,13 +140,13 @@ msgid ""
 "useful when you want to reuse the fill for other objects in the same "
 "document. It acts like a library."
 msgstr ""
-"|Icon for swatches in Fill and Stroke dialog| Den **vita kvadraten** är "
+"|Icon for swatches in Fill and Stroke dialog| Den **vita rutan** är "
 "användbar när du vill återanvända fyllningen för andra objekt i samma "
 "dokument. Den fungerar som ett bibliotek."
 
 #: ../../source/fill-and-stroke-dialog.rst:79 15a5f591965f404abb93c28c6f632d87
 msgid "Icon for swatches in Fill and Stroke dialog"
-msgstr "Ikon för färgprover i dialogrutan Fyllning och streckning"
+msgstr "Ikon för färgprover i dialogrutan Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:32 1f22de723c184fffbe07325e8ba0db37
 msgid ""
@@ -167,8 +167,8 @@ msgid ""
 "for the whole object:"
 msgstr ""
 "Nedan kan du anpassa din färg - vi återkommer till det i nästa kapitel. "
-"Längst ner på alla 3 flikarna finns det två fält som anger värden för hela "
-"objektet:"
+"Längst ner på alla tre flikarna finns det två fält som anger värden för "
+"hela objektet:"
 
 #: ../../source/fill-and-stroke-dialog.rst:39 11c4abfea8594640a08fee12715c592a
 msgid ""
@@ -177,7 +177,7 @@ msgid ""
 "greater than 2% are pretty useless."
 msgstr ""
 ":guilabel:`Oskärpa`: när du klickar, eller klickar och drar i det här "
-"fältet, kan du applicera en oskärpa på hela det valda objektet. Varning: i "
+"fältet, kan du tillämpa en oskärpa på hela det valda objektet. Varning: i "
 "de flesta fall är värden som är större än 2% ganska värdelösa."
 
 #: ../../source/fill-and-stroke-dialog.rst:42 47c92b310b86452180d2f0261dfa200c
@@ -188,7 +188,7 @@ msgid ""
 msgstr ""
 ":guilabel:`Opacitet`: när du klickar eller klickar och drar i det här "
 "fältet ändras den globala opaciteten för det valda objektet - opaciteten "
-"för fyllning och slag ändras lika mycket."
+"för fyllning och streck ändras lika mycket."
 
 #: ../../source/fill-and-stroke-dialog.rst:46 f8aeadb4aa214214829aec0cc185916f
 msgid "The Fill tab of the Fill and Stroke dialog"
@@ -199,12 +199,12 @@ msgid ""
 "The first tab of the :guilabel:`Fill and Stroke` dialog, when an object "
 "with a plain light blue fill is selected."
 msgstr ""
-"Den första fliken i dialogrutan :guilabel:`Fill and Stroke` när ett objekt "
-"med ljusblå fyllning är markerat."
+"Den första fliken i dialogrutan :guilabel:`Fyllning och streck` när ett "
+"objekt med ljusblå fyllning är markerat."
 
 #: ../../source/fill-and-stroke-dialog.rst:53 5ef1ee432c094709a84df279098fbdb7
 msgid "The Stroke paint tab of the Fill and Stroke dialog"
-msgstr "Fliken Stroke paint i dialogen Fill and Stroke"
+msgstr "Fliken Streckfärg i dialogen Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:57 eff64cc1a80f44229743febc285b3680
 msgid ""
@@ -216,7 +216,7 @@ msgstr ""
 
 #: ../../source/fill-and-stroke-dialog.rst:59 b4f21b561c1b4e42ba0c8b0923dcee43
 msgid "The Stroke style tab of the Fill and Stroke dialog"
-msgstr "Stilfliken Stroke i dialogrutan Fill and Stroke"
+msgstr "Fliken Streckstil i dialogrutan Fyllning och streck"
 
 #: ../../source/fill-and-stroke-dialog.rst:63 d4c691c5ed0040608afefcc4df27798f
 msgid "… and 10 mm wide in the third tab."
