--- a/Inkscape/Inkscapes nybörjarguide/managing-workspace.po
+++ b/Inkscape/Inkscapes nybörjarguide/managing-workspace.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 16:21+0200\n"
+"PO-Revision-Date: 2025-09-01 18:07+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -69,7 +69,7 @@ msgid ""
 "rulers, you can see that it represents the page size. Note that the page "
 "border is never seen in exported or saved files."
 msgstr ""
-"Den stora rektangulära linjen som du ser på arbetsytan i ett nytt tomt "
+"Den stora rektangulära linjen som du ser på duken i ett nytt tomt "
 "dokument är sidkanten. Om du jämför sidkanten med linjalerna kan du se "
 "att den representerar sidstorleken. Observera att sidkanten aldrig syns "
 "i exporterade eller sparade filer."
@@ -81,10 +81,10 @@ msgid ""
 "border usually can't be seen when you share your drawing, and can be "
 "thought of as drafts, experiments or available resources."
 msgstr ""
-"För det mesta måste allt som du vill ska synas i din färdiga teckning "
+"För det mesta måste allt som du vill ska synas i din färdiga ritning "
 "ligga innanför denna kant. Element som placeras utanför sidans kantlinje "
-"syns oftast inte när du delar med dig av din teckning, utan kan "
-"betraktas som utkast, experiment eller tillgängliga resurser."
+"syns oftast inte när du delar med dig av din ritning, utan kan betraktas "
+"som utkast, experiment eller tillgängliga resurser."
 
 #: ../../source/managing-workspace.rst:30 17d41b4a7d76468f8c94da73dd475390
 msgid ""
@@ -135,7 +135,7 @@ msgid ""
 msgstr ""
 "Ett annat sätt att ändra detta är att klicka på färgfältet i "
 "avsnittet :guilabel:`Bakgrund` på fliken :guilabel:`Sida` och ställa in "
-"skjutreglaget :guilabel:`A` (\"A\" för :term:`Alfa`) på 255, eller hela "
+"skjutreglaget :guilabel:`A` (\"A\" för :term:`Alpha`) på 255, eller hela "
 "vägen till höger. Du kan också ändra färgen om du vill. Observera att "
 "den här inställningen bara påverkar hur bilden ser ut i Inkscape eller "
 "när du exporterar till PNG."
@@ -150,6 +150,6 @@ msgid ""
 "unneeded bars can be hidden in the menu :menuselection:`View --> Show/"
 "Hide`. The canvas can be moved using the middle mouse button."
 msgstr ""
-"Många använder Inkscape utan rullningslister och utan snapping. Alla "
+"Många använder Inkscape utan rullningslister och utan fästning. Alla "
 "onödiga fält kan döljas i menyn :menuselection:`Visa --> Visa/Dölj`. "
 "Duken kan flyttas med hjälp av den mellersta musknappen."
