--- a/Inkscape/Inkscapes nybörjarguide/stars-and-polygons.po
+++ b/Inkscape/Inkscapes nybörjarguide/stars-and-polygons.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:28+0200\n"
+"PO-Revision-Date: 2025-09-01 18:14+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -39,7 +39,7 @@ msgid ""
 "and sets Inkscape apart from other vector editing software! It offers "
 "numerous creative options which can be edited on the canvas with ease."
 msgstr ""
-"Star/Polygon-verktyget är kanske det mest spännande verktyget för "
+"Stjärn/Polygon-verktyget är kanske det mest spännande verktyget för "
 "nybörjare och skiljer Inkscape från andra vektorredigeringsprogram! Det "
 "erbjuder många kreativa alternativ som enkelt kan redigeras på duken."
 
@@ -50,10 +50,10 @@ msgid ""
 "which has 5 points, will be displayed with its 2 diamond-shaped handles, "
 "as soon as the mouse button is released."
 msgstr ""
-"Precis som med de andra geometriska formverktygen drar du musen på "
-"målarduken på samma sätt som du drar en markeringsruta. "
-"Standardstjärnan, som har 5 punkter, kommer att visas med sina 2 "
-"diamantformade handtag så snart musknappen släpps."
+"Precis som med de andra geometriska formverktygen drar du musen på duken "
+"på samma sätt som du drar en markeringsruta. Standardstjärnan, som har 5 "
+"punkter, kommer att visas med sina två diamantformade handtag så snart "
+"musknappen släpps."
 
 #: ../../source/stars-and-polygons.rst:16 235176e56d1b4f0db5ec9a4ce14c74d4
 msgid ""
@@ -63,9 +63,9 @@ msgid ""
 "is will be positioned exactly at 6 o'clock (or south)."
 msgstr ""
 "Om du vill att din stjärna ska roteras i en viss vinkel kan du hålla "
-"ned :kbd:`Ctrl` medan du ritar den. Detta gör att den \"snäpper\" i steg "
-"om 15°. Om du drar musen nedåt kommer spetsen där muspekaren befinner "
-"sig att placeras exakt klockan 6 (eller söderut)."
+"ned :kbd:`Ctrl` medan du ritar den. Detta gör att den “fäster” i steg om "
+"15°. Om du drar musen nedåt kommer spetsen där muspekaren befinner sig "
+"att placeras exakt klockan 6 (eller söderut)."
 
 #: ../../source/stars-and-polygons.rst:21 7d97a7ed00be4a08ba3642740dc532aa
 msgid ""
@@ -94,15 +94,15 @@ msgid ""
 "holding the mouse cursor above the field and using the scroll wheel will "
 "work."
 msgstr ""
-"Fältet med beteckningen :guilabel:`Spoke Ratio` i "
+"Fältet med beteckningen :guilabel:`Ekerförhållande` i "
 "verktygsstyrningsfältet fungerar också utan att du behöver vrida eller "
 "vända på stjärnan. Du kan använda upp- och nedpilarna bredvid fältet för "
 "att ändra siffran även där. Även om du håller muspekaren ovanför fältet "
-"och använder scrollhjulet fungerar det."
+"och använder rullhjulet fungerar det."
 
 #: ../../source/stars-and-polygons.rst:34 4eef3f3d28e74e2199baa6ad57805ad3
 msgid "Function of the Star tools' handles"
-msgstr "Funktion hos Star-verktygens handtag"
+msgstr "Funktion hos Stjärnverktygens handtag"
 
 #: ../../source/stars-and-polygons.rst:38 8aacdbf8271f4ca280fe7461a4379809
 msgid ""
@@ -158,8 +158,8 @@ msgstr ""
 "former med utgångspunkt från en enda stjärna. Men det finns ännu fler "
 "alternativ! Om du vill lägga till fler spetsar på en stjärna eller fler "
 "sidor på en polygon anger du antingen det antal spetsar du vill ha i "
-"fältet :guilabel:`Corners` i verktygskontrollfältet eller så klickar du "
-"på upp-/nedpilarna bredvid."
+"fältet :guilabel:`Hörn` i verktygskontrollfältet eller så klickar du på "
+"upp-/nedpilarna bredvid."
 
 #: ../../source/stars-and-polygons.rst:62 68deb6029442484cab7ced1ff21ac2a3
 msgid ""
@@ -174,7 +174,7 @@ msgstr ""
 "du hålla ned :kbd:`Shift` medan du drar i något av handtagen. Ju längre "
 "du drar dem, desto mer avrundning får du (dra musen horisontellt för "
 "bästa resultat). Eller som tidigare, antingen använda pilarna bredvid "
-"fältet :guilabel:`Rounded` i verktygskontrollfältet, eller ändra dess "
+"fältet :guilabel:`Rundad` i verktygskontrollfältet, eller ändra dess "
 "värde genom att skriva in ett nytt."
 
 #: ../../source/stars-and-polygons.rst:69 4024ef4fab454ed5aa4878fcda4887b4
@@ -188,8 +188,8 @@ msgstr ""
 "När du trycker på :kbd:`Alt` samtidigt som du drar ett handtag kommer "
 "stjärnan eller polygonen att bli slumpmässig. Eller som tidigare, använd "
 "sifferfältet med pilarna för att ändra värdet "
-"för :guilabel:`Randomized`. En stjärnas spetsar kommer då att vara olika "
-"långa och en polygon kommer att se förvrängd ut."
+"för :guilabel:`Slumpmässig`. En stjärnas spetsar kommer då att vara "
+"olika långa och en polygon kommer att se förvrängd ut."
 
 #: ../../source/stars-and-polygons.rst:74
 #: ../../source/stars-and-polygons.rst:80 5f27c225de304a639d00481491015d93
@@ -199,7 +199,7 @@ msgstr "Stjärnor med olika alternativ"
 
 #: ../../source/stars-and-polygons.rst:78 19c6178268bd488dbd3e055135b4385f
 msgid "Adding a slight rounding. Adding a little bit of randomness."
-msgstr "Lägger till en liten avrundning. Lägga till lite slumpmässighet."
+msgstr "Lägger till en liten avrundning. Lägger till lite slumpmässighet."
 
 #: ../../source/stars-and-polygons.rst:84 830b5940d36e4c7c85dd942f2687a294
 msgid ""
