--- a/Inkscape/Inkscapes nybörjarguide/live-path-effects.po
+++ b/Inkscape/Inkscapes nybörjarguide/live-path-effects.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 08:41+0200\n"
+"PO-Revision-Date: 2025-09-01 20:38+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/live-path-effects.rst:3 43596aab9910486e828e85825933dd4c
 msgid "Live Path Effects"
-msgstr "Live Path-effekter"
+msgstr "Direkta slingeffekter"
 
 #: ../../source/live-path-effects.rst:7 b375c0f2ecc9457daca5875ba07b3b44
 msgid ""
@@ -31,8 +31,8 @@ msgid ""
 "exciting objects from paths and groups, without destroying the original "
 "paths."
 msgstr ""
-"**Live Path Effects** (eller LPEs) i Inkscape kan användas för att skapa "
-"nya spännande objekt från slingor och grupper, utan att förstöra de "
+"**Direkta slingeffekter** (eller LPEer) i Inkscape kan användas för att "
+"skapa nya spännande objekt från slingor och grupper, utan att förstöra de "
 "ursprungliga slingorna."
 
 #: ../../source/live-path-effects.rst:9 afef68be43a84271aa482bebedd8a560
@@ -47,37 +47,37 @@ msgstr ""
 
 #: ../../source/live-path-effects.rst:11 91223f70cf394ab086fdaf6b95e428f7
 msgid ""
-"Each type of path effect has its own, unique set of options in this "
-"dialog, and most of them can also be manipulated by dragging the effect's "
-"handles with the Node tool on canvas."
+"Each type of path effect has its own, unique set of options in this dialog, "
+"and most of them can also be manipulated by dragging the effect's handles "
+"with the Node tool on canvas."
 msgstr ""
 "Varje typ av slingeffekt har sin egen, unika uppsättning alternativ i den "
 "här dialogen, och de flesta av dem kan också manipuleras genom att dra "
-"effektens handtag med Node-verktyget på canvas."
+"effektens handtag med Nodverktyget på duken."
 
 #: ../../source/live-path-effects.rst:13 9143a0cb41d14272bf0b8e91fe3a7efd
 msgid ""
 "Path effects can also be stacked. So you could, for example, first roughen "
-"the outline of a path, then arrange copies of the path around a circle, "
-"and then align dozens of those circles of the roughened paths in a grid."
+"the outline of a path, then arrange copies of the path around a circle, and "
+"then align dozens of those circles of the roughened paths in a grid."
 msgstr ""
-"Slingeffekter kan också staplas. Du kan t.ex. först rugga upp konturen av "
-"en slinga, sedan ordna kopior av slingan runt en cirkel och sedan placera "
+"Slingeffekter kan också staplas. Du kan t.ex. först rugga upp konturen av en "
+"slinga, sedan ordna kopior av slingan runt en cirkel och sedan placera "
 "dussintals av dessa cirklar av de ruggade slingorna i ett rutnät."
 
 #: ../../source/live-path-effects.rst:15 1e2c3a48fd034a118aaa32e2d1ca3d99
 msgid ""
 "Since these effects are non-destructive, you can edit your original shape "
-"any time later, and all the stacked effects will automatically adjust to "
-"the changes."
+"any time later, and all the stacked effects will automatically adjust to the "
+"changes."
 msgstr ""
 "Eftersom effekterna är icke-destruktiva kan du redigera din ursprungliga "
-"form när som helst senare, och alla staplade effekter kommer automatiskt "
-"att anpassas till ändringarna."
+"form när som helst senare, och alla staplade effekter kommer automatiskt att "
+"anpassas till ändringarna."
 
 #: ../../source/live-path-effects.rst:18 ba560cc99e95452687e6b02f8ddc116e
 msgid "Adding a Live Path Effect (LPE) to a Path"
-msgstr "Lägga till en Live Path Effect (LPE) till en slinga"
+msgstr "Lägga till en direkt slingeffekt (LPE) till en slinga"
 
 #: ../../source/live-path-effects.rst:20 6ca88d2dd538433db70d6b3e898ffa9e
 msgid "Select an object."
@@ -86,15 +86,15 @@ msgstr "Välj ett objekt."
 #: ../../source/live-path-effects.rst:21 ccf8c718db744ad6a5a5afff3f6be256
 msgid "Open the LPE dialog (:menuselection:`Path --> Live Path Effects`)."
 msgstr ""
-"Öppna LPE-dialogrutan (:menuselection:`Slinga --> Live Path Effects`)."
+"Öppna LPE-dialogrutan (:menuselection:`Slinga --> Direkta slingeffekter`)."
 
 #: ../../source/live-path-effects.rst:22 70eff11e6dd349d581a7c3279c7b1ed5
 msgid ""
 "In the LPE dialog, click the arrow in the search field or start typing to "
 "see all available effects."
 msgstr ""
-"Klicka på pilen i sökfältet i LPE-dialogrutan eller börja skriva för att "
-"se alla tillgängliga effekter."
+"Klicka på pilen i sökfältet i LPE-dialogrutan eller börja skriva för att se "
+"alla tillgängliga effekter."
 
 #: ../../source/live-path-effects.rst:23 13a1749c0a764c1c93752a5d8eced1b7
 msgid "Choose an effect from the list."
@@ -102,8 +102,8 @@ msgstr "Välj en effekt från listan."
 
 #: ../../source/live-path-effects.rst:24 d9c5c1fdd66b4698a6077ae5438d61fb
 msgid ""
-"Adjust options in the dialog. Handles appear next to the object for "
-"further adjustments if you use Node Tool (N)."
+"Adjust options in the dialog. Handles appear next to the object for further "
+"adjustments if you use Node Tool (N)."
 msgstr ""
 "Justera alternativen i dialogrutan. Handtag visas bredvid objektet för "
 "ytterligare justeringar om du använder Nodverktyg (N)."
@@ -134,18 +134,18 @@ msgid ""
 "Useful for creating custom brushes or deforming objects on a path."
 msgstr ""
 "Med den här effekten kan du ta vilken form som helst och böja den längs en "
-"anpassad slinga. Användbar för att skapa anpassade borstar eller deformera "
+"anpassad slinga. Användbar för att skapa anpassade penslar eller deformera "
 "objekt på en slinga."
 
 #: ../../source/live-path-effects.rst:38 95e293a88a144880aaef2aed505dbaa7
 msgid "Corners (Fillet/Chamfer)"
-msgstr "Hörn (Fillet/Chamfer)"
+msgstr "Hörn (Avrundning/avfasning)"
 
 #: ../../source/live-path-effects.rst:39 b143b9538f4749219ec8d28061e9fbe0
 msgid ""
-"After you add this effect, you gain the ability to round any corner on "
-"your shape. You can round individual nodes by selecting them and dragging "
-"green handles on the canvas, or you can change values in the dialog."
+"After you add this effect, you gain the ability to round any corner on your "
+"shape. You can round individual nodes by selecting them and dragging green "
+"handles on the canvas, or you can change values in the dialog."
 msgstr ""
 "När du har lagt till den här effekten får du möjlighet att runda alla hörn "
 "på din form. Du kan runda enskilda noder genom att markera dem och dra i "
@@ -153,11 +153,11 @@ msgstr ""
 
 #: ../../source/live-path-effects.rst:41 0465904e8f3f4af6953100aa027d9e8d
 msgid "Hatches"
-msgstr "Luckor"
+msgstr "Skraffel"
 
 #: ../../source/live-path-effects.rst:42 26b67c219a304c5489ecabb9e38eae24
 msgid "Fills your shape with hatches that can be heavily customized."
-msgstr "Fyller din form med luckor som kan anpassas kraftigt."
+msgstr "Fyller din form med skraffel som kan anpassas kraftigt."
 
 #: ../../source/live-path-effects.rst:44 59ad7df3f97a4b1e817e57b2f2280581
 msgid "Interpolate Sub-Paths"
@@ -165,20 +165,19 @@ msgstr "Interpolera underslingor"
 
 #: ../../source/live-path-effects.rst:45 e5f055874d8d415d82f507b72e290372
 msgid ""
-"The principle is the same as for the :guilabel:`Interpolate` extension, "
-"but the LPE approaches the topic differently. It will not create "
-"intermediate forms between two different objects, but only between parts "
-"of a single path. You need to combine two paths, so you have a path "
-"consisting of two sub-paths for this effect to work (:menuselection:`Path "
-"--> Combine` or :kbd:`Ctrl` + :kbd:`K`). Use the options to control the "
-"number of in-between steps and the trajectory along which blending will "
-"happen."
+"The principle is the same as for the :guilabel:`Interpolate` extension, but "
+"the LPE approaches the topic differently. It will not create intermediate "
+"forms between two different objects, but only between parts of a single "
+"path. You need to combine two paths, so you have a path consisting of two "
+"sub-paths for this effect to work (:menuselection:`Path --> Combine` "
+"or :kbd:`Ctrl` + :kbd:`K`). Use the options to control the number of in-"
+"between steps and the trajectory along which blending will happen."
 msgstr ""
-"Principen är densamma som för tillägget :guilabel:`Interpolera`, men LPE "
-"närmar sig ämnet på ett annat sätt. Den skapar inte mellanformer mellan "
-"två olika objekt, utan bara mellan delar av en enda slinga. Du måste "
-"kombinera två vägar, så att du har en väg som består av två underslingor "
-"för att denna effekt ska fungera (:menuselection:`Slinga --> Kombinera` "
+"Principen är densamma som för tillägget :guilabel:`Interpolering`, men LPE "
+"närmar sig ämnet på ett annat sätt. Den skapar inte mellanformer mellan två "
+"olika objekt, utan bara mellan delar av en enda slinga. Du måste kombinera "
+"två slingor, så att du har en slinga som består av två underslingor för att "
+"denna effekt ska fungera (:menuselection:`Slinga --> Kombinera` "
 "eller :kbd:`Ctrl` + :kbd:`K`). Använd alternativen för att styra antalet "
 "mellansteg och den slinga längs vilken blandningen kommer att ske."
 
@@ -188,8 +187,8 @@ msgstr "Knut"
 
 #: ../../source/live-path-effects.rst:48 f69e8b1c41f1410d992213ed3bf919aa
 msgid ""
-"Creates gaps in sections of a path, when they cross with another part of "
-"the path."
+"Creates gaps in sections of a path, when they cross with another part of the "
+"path."
 msgstr ""
 "Skapar luckor i delar av en slinga när de korsas med en annan del av slingan."
 
@@ -199,8 +198,8 @@ msgstr "Spegelsymmetri"
 
 #: ../../source/live-path-effects.rst:51 06e4d90ca70b4cc8a949508b45921bd3
 msgid ""
-"This effect mirrors your drawing along an axis of your choice. You could "
-"try it when drawing symmetrical objects like faces, bottles, buildings, or "
+"This effect mirrors your drawing along an axis of your choice. You could try "
+"it when drawing symmetrical objects like faces, bottles, buildings, or "
 "butterflies."
 msgstr ""
 "Denna effekt speglar din ritning längs en axel som du själv väljer. Du kan "
@@ -209,17 +208,17 @@ msgstr ""
 
 #: ../../source/live-path-effects.rst:53 d3f46427a53945beb344d754c99b6327
 msgid "Perspective / Envelope"
-msgstr "Perspektiv/Kuvert"
+msgstr "Perspektiv/Konvolut"
 
 #: ../../source/live-path-effects.rst:54 134bb73ac7334c88ab7bf40cc6309fbd
 msgid ""
 "Seriously helpful for drawing in perspective, thanks to the addition of 4 "
-"handles for the corners that can be moved around to make it look like a "
-"flat object is tilted in 3D space."
+"handles for the corners that can be moved around to make it look like a flat "
+"object is tilted in 3D space."
 msgstr ""
 "Mycket användbart för perspektivritning tack vare 4 handtag för hörnen som "
-"kan flyttas runt för att få det att se ut som om ett platt objekt lutar i "
-"3D-rymden."
+"kan flyttas runt för att få det att se ut som om ett platt objekt lutar i 3D-"
+"rymden."
 
 #: ../../source/live-path-effects.rst:56 6034f59c503a45719d0736b967741fa4
 msgid "Stitch Sub-Paths"
@@ -230,7 +229,7 @@ msgid ""
 "This effect is similar to Interpolate Sub-Paths, but it adds perpendicular "
 "lines between two paths."
 msgstr ""
-"Denna effekt liknar Interpolate Sub-Paths, men den lägger till vinkelräta "
+"Denna effekt liknar Interpolera underslingor, men den lägger till vinkelräta "
 "linjer mellan två slingor."
 
 #: ../../source/live-path-effects.rst:59 9c7d74432dea4645bc03e822130df93e
@@ -240,15 +239,15 @@ msgstr "Mönster längs slinga"
 #: ../../source/live-path-effects.rst:60 84e3360bd8e644d09e8956b5426d101f
 msgid ""
 "This LPE's principle is similar to the extension with the same name. "
-"However, here the pattern parts will all be parts of the same path (and "
-"they will always be distorted to follow the path direction). It can be "
-"used like a brush, or just for adding a repeating edge to any object."
+"However, here the pattern parts will all be parts of the same path (and they "
+"will always be distorted to follow the path direction). It can be used like "
+"a brush, or just for adding a repeating edge to any object."
 msgstr ""
-"Principen för denna LPE liknar den som gäller för tillägget med samma "
-"namn. Här kommer dock alla mönsterdelar att vara delar av samma slinga "
-"(och de kommer alltid att förvrängas för att följa slingans riktning). Den "
-"kan användas som en pensel, eller bara för att lägga till en repeterande "
-"kant på ett objekt."
+"Principen för denna LPE liknar den som gäller för tillägget med samma namn. "
+"Här kommer dock alla mönsterdelar att vara delar av samma slinga (och de "
+"kommer alltid att förvrängas för att följa slingans riktning). Den kan "
+"användas som en pensel, eller bara för att lägga till en repeterande kant på "
+"ett objekt."
 
 #: ../../source/live-path-effects.rst:62 db31c21314f14cd4a7b7d5b47bd8f4ed
 msgid "Offset"
@@ -257,24 +256,24 @@ msgstr "Förskjutning"
 #: ../../source/live-path-effects.rst:63 926cd8c9a0684eb5b9c2ef5d75de1acf
 msgid ""
 "This effect changes the thickness of the whole object. You can change the "
-"offset (or inset, too!) with a specific value in a panel. Or you can drag "
-"on a round handle on the canvas just using your mouse."
+"offset (or inset, too!) with a specific value in a panel. Or you can drag on "
+"a round handle on the canvas just using your mouse."
 msgstr ""
 "Denna effekt ändrar tjockleken på hela objektet. Du kan ändra förskjutning "
-"(eller inset också!) med ett specifikt värde i en panel. Eller så kan du "
+"(eller indrag också!) med ett specifikt värde i en panel. Eller så kan du "
 "dra i ett runt handtag på duken med hjälp av musen."
 
 #: ../../source/live-path-effects.rst:65 277f5d2594d540aca330c8477f7b7430
 msgid "Power Stroke"
-msgstr "Power Stroke"
+msgstr "Kraftstreck"
 
 #: ../../source/live-path-effects.rst:66 21f962805d854e1f9e22283af90e542e
 msgid ""
 "Adds handles that allow you to change the width of the path, so it can be "
 "different at different locations along the path."
 msgstr ""
-"Lägger till handtag som gör att du kan ändra bredden på slingan, så att "
-"den kan vara olika på olika platser längs slingan."
+"Lägger till handtag som gör att du kan ändra bredden på slingan, så att den "
+"kan vara olika på olika platser längs slingan."
 
 #: ../../source/live-path-effects.rst:68 0a3fa3372ee646fe99bb33828b8d033d
 msgid "Rotate Copies"
@@ -283,8 +282,8 @@ msgstr "Rotera kopior"
 #: ../../source/live-path-effects.rst:69 6f0d8db4cfa240e2b117285d350eb36a
 msgid ""
 "This effect creates many copies of the path or object. It places those "
-"copies of the object around a circle. You could use it for making "
-"mandalas, flowers, and other radial drawings."
+"copies of the object around a circle. You could use it for making mandalas, "
+"flowers, and other radial drawings."
 msgstr ""
 "Denna effekt skapar många kopior av slingan eller objektet. Den placerar "
 "kopiorna av objektet runt en cirkel. Du kan använda den för att skapa "
@@ -304,33 +303,33 @@ msgstr ""
 
 #: ../../source/live-path-effects.rst:74 916e7c174277428d9e59d553fdd2d770
 msgid "Sketch"
-msgstr "Skiss"
+msgstr "Skissa"
 
 #: ../../source/live-path-effects.rst:75 0748311da7454b0f8640e2fbe56d98d1
 msgid ""
-"Transforms your path into multiple lines that look like a sketch drawn "
-"with a pencil."
+"Transforms your path into multiple lines that look like a sketch drawn with "
+"a pencil."
 msgstr ""
-"Omvandlar din slinga till flera linjer som ser ut som en skiss ritad med "
+"Transformerar din slinga till flera linjer som ser ut som en skiss ritad med "
 "en blyertspenna."
 
 #: ../../source/live-path-effects.rst:77 6dcd9d276b5e42c8861d62ec08855e79
 msgid "Tiling"
-msgstr "Klinker"
+msgstr "Brickor"
 
 #: ../../source/live-path-effects.rst:78 7d8207d60a7945bf87793b5bf14e38bd
 msgid ""
-"This is a very powerful tool for quickly creating and arranging many "
-"copies of an object. It offers options to control the number of clones/"
-"tiles in rows and columns, gaps between them, offsets, size and rotation. "
-"There are also 16 different tiling rules available for you to choose from. "
-"This is useful for creating patterns, grids, and other repeating elements."
+"This is a very powerful tool for quickly creating and arranging many copies "
+"of an object. It offers options to control the number of clones/tiles in "
+"rows and columns, gaps between them, offsets, size and rotation. There are "
+"also 16 different tiling rules available for you to choose from. This is "
+"useful for creating patterns, grids, and other repeating elements."
 msgstr ""
 "Detta är ett mycket kraftfullt verktyg för att snabbt skapa och arrangera "
 "många kopior av ett objekt. Det erbjuder alternativ för att styra antalet "
-"kloner/tiles i rader och kolumner, mellanrum mellan dem, förskjutningar, "
-"storlek och rotation. Det finns också 16 olika tiling-regler som du kan "
-"välja mellan. Detta är användbart för att skapa mönster, rutnät och andra "
+"kloner/brickor i rader och kolumner, mellanrum mellan dem, förskjutningar, "
+"storlek och rotation. Det finns också 16 olika brickregler som du kan välja "
+"mellan. Detta är användbart för att skapa mönster, rutnät och andra "
 "upprepande element."
 
 #: ../../source/live-path-effects.rst:83 a026a080ddba4935bbce357e6d1c58c4
