--- a/Inkscape/Inkscapes nybörjarguide/glossary.po
+++ b/Inkscape/Inkscapes nybörjarguide/glossary.po
@@ -438,12 +438,12 @@ msgstr "Arkiv för personliga paket"
 #: ../../source/glossary.rst:85 ed57a136d7c54f84b81c79620fa3eff7
 msgid ""
 "A personal repository for Ubuntu packages hosted on `Launchpad "
-"<launchpad.net>`__ (abbreviated as 'ppa'). Ubuntu's package management "
+"<https://launchpad.net>`__ (abbreviated as 'ppa'). Ubuntu's package management "
 "tool 'apt' is able to load and install .deb packages published in a ppa. "
 "The Inkscape developers maintain a ppa for Inkscape."
 msgstr ""
 "Ett personligt arkiv för Ubuntu-paket som finns på `Launchpad "
-"<launchpad.net>`__ (förkortat 'ppa'). Ubuntus pakethanteringsverktyg "
+"<https://launchpad/launchpad.net>`__ (förkortat 'ppa'). Ubuntus pakethanteringsverktyg "
 "'apt' kan ladda och installera .deb-paket som publiceras i en ppa. "
 "Inkscape-utvecklarna underhåller ett ppa för Inkscape."
 
