--- a/Inkscape/Inkscapes nybörjarguide/custom-colors.po
+++ b/Inkscape/Inkscapes nybörjarguide/custom-colors.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-07-27 16:17+0200\n"
+"PO-Revision-Date: 2025-09-01 20:50+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.17.0\n"
-"X-Generator: Poedit 3.6\n"
+"X-Generator: Poedit 3.7\n"
 
 #: ../../source/custom-colors.rst:3 3badfe4eec0d4be2b0fef1a225ccdec2
 msgid "Custom Colors"
@@ -30,7 +30,7 @@ msgid ""
 "|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`F` :menuselection:`Object --> Fill and Stroke`"
 msgstr ""
-"|Fyllning och streck dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
+"|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`F` :menuselection:`Objekt --> Fyllning och streck`"
 
 #: ../../source/custom-colors.rst:91 cd3f762da4d544aa8f06b592580f0297
