--- a/Inkscape/Inkscapes nybörjarguide/fill-and-stroke-dialog.po
+++ b/Inkscape/Inkscapes nybörjarguide/fill-and-stroke-dialog.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-09-01 18:04+0200\n"
+"PO-Revision-Date: 2025-09-01 20:51+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.17.0\n"
-"X-Generator: Poedit 3.6\n"
+"X-Generator: Poedit 3.7\n"
 
 #: ../../source/fill-and-stroke-dialog.rst:3 68677613f7d44124a4b495cf5136b45b
 msgid "The Fill and Stroke Dialog"
@@ -30,7 +30,7 @@ msgid ""
 "|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`F` :menuselection:`Object --> Fill and Stroke`"
 msgstr ""
-"|Fyllning och streck dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
+"|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`F` :menuselection:`Objekt --> Fyllning och streck`"
 
 #: ../../source/fill-and-stroke-dialog.rst:65 8e6d2b09c82d43d8b92099a370ae14ab
