--- a/Inkscape/Inkscapes nybörjarguide/filters.po
+++ b/Inkscape/Inkscapes nybörjarguide/filters.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 08:40+0200\n"
+"PO-Revision-Date: 2025-09-02 13:29+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -33,9 +33,9 @@ msgid ""
 "menu and tried to find a descriptive name for each."
 msgstr ""
 "En av menyposterna är tillägnad **filter**. Mer exakt är alla dessa "
-"kombinationer av SVG-filter. Kombinationsmöjligheterna är oändliga, och "
-"Inkscape-utvecklarna har lagt in några kombinationsförslag i menyn och försökt "
-"hitta ett beskrivande namn för varje."
+"kombinationer av SVG-filter. Kombinationsmöjligheterna är oändliga och Inkscape-"
+"utvecklarna har lagt in några kombinationsförslag i menyn och försökt hitta ett "
+"beskrivande namn för varje."
 
 #: ../../source/filters.rst:11 1a7334ebbdab41da92ce04113865a7e1
 msgid ""
@@ -52,8 +52,8 @@ msgid ""
 "It will only be applied to the object when you click :guilabel:`Apply`."
 msgstr ""
 "Om du vill leka med olika värden kan du kryssa i den lilla rutan med "
-"texten :guilabel:`Live Preview`, så visas resultatet på duken. Det tillämpas på "
-"objektet först när du klickar på :guilabel:`Apply`."
+"texten :guilabel:`Direkt förhandsvisning`, så visas resultatet på duken. Det "
+"tillämpas på objektet först när du klickar på :guilabel:`Tillämpa`."
 
 #: ../../source/filters.rst:19 e47034a8df644ac484183d0391960b42
 msgid "|image0|"
@@ -74,7 +74,7 @@ msgid ""
 "to :menuselection:`Filters --> Filter Gallery`."
 msgstr ""
 "Som ett alternativ till menyn Filter kan du bläddra bland och söka i alla "
-"färdiga filter med förhandsgranskningar i **Filter Gallery**. Du kan öppna det "
+"färdiga filter med förhandsgranskningar i **Filtergalleri**. Du kan öppna det "
 "genom att gå till :menuselection:`Filter --> Filtergalleri`."
 
 #: ../../source/filters.rst:26 32ca1424740e44f5b47aa3dab371e450
@@ -86,7 +86,7 @@ msgid ""
 ":menuselection:`Distort --> Chalk and Sponge`: Turns objects into an "
 "interesting explosion."
 msgstr ""
-":menuselection:`Distort --> Krita och Svamp`: Förvandlar objekt till en "
+":menuselection:`Förvräng --> Krita och svamp`: Förvandlar objekt till en "
 "intressant explosion."
 
 #: ../../source/filters.rst:29 c0f1ffedc2e04dd793b64dfb3e61142f
@@ -94,18 +94,18 @@ msgid ""
 ":menuselection:`Image Paint and Draw --> Pencil`: Converts the selected objects "
 "to a sketch."
 msgstr ""
-":menuselection:`Bildfärg och ritning --> Blyertspenna`: Konverterar de "
+":menuselection:`Bildmålning och rita --> Blyertspenna`: Konverterar de "
 "markerade objekten till en skiss."
 
 #: ../../source/filters.rst:30 3136dd2b584145bd82578c6527f13474
 msgid ""
 ":menuselection:`Scatter`: These filters replicate the effect of spray painting."
 msgstr ""
-":menuselection:`Scatter`: Dessa filter replikerar effekten av spraymålning."
+":menuselection:`Sprid ut`: Dessa filter replikerar effekten av spraymålning."
 
 #: ../../source/filters.rst:31 7b9d2ede768c4bd8921936c234fb0265
 msgid ":menuselection:`Blurs`: Offers several blur variations."
-msgstr ":menuselection:`Blurs`: Erbjuder flera oskärpevariationer."
+msgstr ":menuselection:`Oskärpa`: Erbjuder flera oskärpevariationer."
 
 #: ../../source/filters.rst:32 fd22cd9fcf594f55b2df97876e486dd0
 msgid ""
@@ -125,7 +125,7 @@ msgstr ""
 
 #: ../../source/filters.rst:39 0e2efce6d44d43ea8e2920444e2e0dfd
 msgid "The Drop Shadow Filter"
-msgstr "Filtret för droppskuggor"
+msgstr "Filtret för släppskugga"
 
 #: ../../source/filters.rst:41 496a1e7b02594ca582b48c9573c15517
 msgid "This filter adds a shadow under to the selected object. To add the filter:"
@@ -142,12 +142,12 @@ msgid ""
 "Add the filter from :menuselection:`Filters --> Shadows and Glows --> Drop "
 "Shadow`."
 msgstr ""
-"Lägg till filtret från :menuselection:`Filters --> Shadows and Glows --> Drop "
-"Shadow`."
+"Lägg till filtret från :menuselection:`Filter --> Skuggor och sken --> "
+"Släppskugga`."
 
 #: ../../source/filters.rst:45 18756a6fc73b4803aa6aa0bd52416198
 msgid "Click on the checkbox :guilabel:`Live Preview`."
-msgstr "Klicka på kryssrutan :guilabel:`Live Preview`."
+msgstr "Klicka på kryssrutan :guilabel:`Direkt förhandsvisning`."
 
 #: ../../source/filters.rst:46 4aa9c01b6b594867bfa557483555e785
 msgid "Adjust the filter's dialog options (described below)."
@@ -155,7 +155,7 @@ msgstr "Justera filtrets dialogalternativ (beskrivs nedan)."
 
 #: ../../source/filters.rst:47 ccdca12ab85f4618b2dfc51d33fd3b72
 msgid "Click :guilabel:`Apply` when you are happy with your result."
-msgstr "Klicka på :guilabel:`Apply` när du är nöjd med ditt resultat."
+msgstr "Klicka på :guilabel:`Tillämpa` när du är nöjd med ditt resultat."
 
 #: ../../source/filters.rst:49 6f2927231f504d4d87199e3fd330a3fa
 msgid ""
@@ -175,33 +175,33 @@ msgstr "I rullgardinsmenyn för skuggtyp kan du välja mellan:"
 
 #: ../../source/filters.rst:53 8436b540819a40c1a6054a26e71128dc
 msgid ":guilabel:`Outer`: normal shadow"
-msgstr ":guilabel:`Utvändigt`: normal skugga"
+msgstr ":guilabel:`Yttre`: normal skugga"
 
 #: ../../source/filters.rst:54 3c3a00df8dd04ffe93f981ce6a220afb
 msgid ":guilabel:`Inner`: the object looks like it were a hole"
-msgstr ":guilabel:`Inner`: objektet ser ut som om det vore ett hål"
+msgstr ":guilabel:`Inre`: objektet ser ut som om det vore ett hål"
 
 #: ../../source/filters.rst:55 6996a614703243a495a6d36f8fb166e5
 msgid ""
 ":guilabel:`Outer Cutout`: just the outer shadow, the object will be invisible"
 msgstr ""
-":guilabel:`Outer Cutout`: bara den yttre skuggan, objektet kommer att vara "
-"osynligt"
+":guilabel:`Utvändig utskärning`: bara den yttre skuggan, objektet kommer att "
+"vara osynligt"
 
 #: ../../source/filters.rst:56 efc1f3ab8bdd432cabb4f6ee8a106641
 msgid ":guilabel:`Inner Cutout`: just the inner shadow, without the object"
-msgstr ":guilabel:`Inner Cutout`: bara den inre skuggan, utan objektet"
+msgstr ":guilabel:`Invändig utskärning`: bara den inre skuggan, utan objektet"
 
 #: ../../source/filters.rst:57 8cce20ada850433fbfaeef8d295c2f06
 msgid ":guilabel:`Shadow Only`: the full shadow, without the object"
-msgstr ":guilabel:``Shadow Only``: den fulla skuggan, utan objektet"
+msgstr ":guilabel:`Endast skugga`: den fullständiga skuggan, utan objektet"
 
 #: ../../source/filters.rst:59 cf0e2bb72fde427eb2e14e46b089bda4
 msgid ""
 "In the :guilabel:`Blur color` tab, you can change the shadow's color and "
 "opacity (the intensity of the shadow)."
 msgstr ""
-"På fliken :guilabel:`Blur color` kan du ändra skuggans färg och opacitet "
+"På fliken :guilabel:`Oskärpefärg` kan du ändra skuggans färg och opacitet "
 "(skuggans intensitet)."
 
 #: ../../source/filters.rst:63 b75d91faaa0e477cac8ef1e772fa8127
@@ -222,7 +222,7 @@ msgid ""
 "entry :guilabel:`Filter Editor` at the bottom of the :guilabel:`Filters` menu."
 msgstr ""
 "Inkscape erbjuder en dialogruta för redigering av filter, som kan öppnas från "
-"posten :guilabel:`Filter Editor` längst ner i menyn :guilabel:`Filters`."
+"posten :guilabel:`Filterredigerare` längst ner i menyn :guilabel:`Filter`."
 
 #: ../../source/filters.rst:71 118e285231b744bf8b50e5776bc9f04c
 msgid ""
